[package]
name = "archivelfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive"] }
env_logger = "0.10.0"
futures = "0.3.29"
glob = "0.3.1"
log = "0.4.20"
mime_guess = "2.0.4"
reqwest = { version = "0.11.22", default_features = false, features = ["rustls-tls"] }
tokio = { version = "1.33.0", features = ["full"] }
walkdir = "2.4.0"
