[package]
name = "archivelfs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive"] }
env_logger = "0.10.0"
futures = "0.3.29"
log = "0.4.20"
reqwest = { version = "0.11.22", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0.209", features = ["derive"] }
tokio = { version = "1.33.0", features = ["full"] }
toml = "0.8.19"
walkdir = "2.4.0"
